# oxygen-style

./: CMakeLists.txt  README.md
kdecoration/: CMakeLists.txt
kirigami-plasmadesktop-integration/: CMakeLists.txt
kstyle/: oxygen.kcfg  oxygenstyle.cpp  oxygenstylehelper.cpp  oxygenstylehelper.h
kstyle/config/: oxygenstyleconfig.cpp
po/af/: oxygen_style_config.po
po/ar/: oxygen_style_config.po
po/ast/: oxygen_style_config.po
po/az/: oxygen_style_config.po
po/be/: oxygen_style_config.po
po/be@latin/: oxygen_style_config.po
po/bg/: oxygen_style_config.po
po/bn_IN/: oxygen_style_config.po
po/br/: oxygen_style_config.po
po/bs/: oxygen_style_config.po
po/ca/: oxygen_style_config.po
po/ca@valencia/: oxygen_style_config.po
po/cs/: oxygen_style_config.po
po/csb/: oxygen_style_config.po
po/cy/: oxygen_style_config.po
po/da/: oxygen_style_config.po
po/de/: oxygen_style_config.po
po/el/: oxygen_style_config.po
po/en_GB/: oxygen_style_config.po
po/eo/: oxygen_style_config.po
po/es/: oxygen_style_config.po
po/et/: oxygen_style_config.po
po/eu/: oxygen_style_config.po
po/fa/: oxygen_style_config.po
po/fi/: oxygen_style_config.po
qtquickcontrols/: ApplicationWindow.qml  BusyIndicator.qml  Button.qml  CMakeLists.txt  CheckBox.qml  CheckDelegate.qml  ComboBox.qml  Control.qml  DelayButton.qml  Dial.qml  Dialog.qml  DialogButtonBox.qml  Drawer.qml  Frame.qml  GradientBackground.qml  GradientRadialBackground.qml  GroupBox.qml  HorizontalHeaderView.qml  ItemDelegate.qml  Label.qml  Menu.qml  MenuBar.qml  MenuBarItem.qml  MenuItem.qml  MenuItemBackground.qml  MenuSeparator.qml  Page.qml  PageIndicator.qml  Pane.qml  Popup.qml  ProgressBar.qml  RadioButton.qml  RadioDelegate.qml  RangeSlider.qml  RoundButton.qml  ScrollBar.qml  ScrollView.qml  Slider.qml  SpinBox.qml  StackView.qml  (+19 more)
(+65 files in other folders)
